# pipali

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bunfig.toml  drizzle.config.ts  index.ts  package.json  playwright.config.ts
.github/workflows/: desktop.yml
drizzle/: 0000_great_moonstone.sql  0000_robust_nomad.sql  0000_round_toad_men.sql  0000_smart_hairball.sql  0001_flippant_the_order.sql  0001_same_toad_men.sql  0002_automation_system.sql  0003_automation_conversation.sql  0004_elite_bulldozer.sql  0005_nullable_trigger.sql  0006_burly_living_mummy.sql  0007_wooden_major_mapleleaf.sql  0008_spooky_random.sql  0009_add-use-responses-api.sql  0010_warm_gravity.sql  0011_empty_switch.sql  0012_mcp_confirmation_mode.sql  0013_fantastic_black_queen.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0004_snapshot.json  0006_snapshot.json  0007_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  _journal.json
scripts/: build-tauri.ts  build.ts  recover-db.ts
src/: index.ts  init.ts  run.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-frontend/: index.html  package.json  tsconfig.json  vite.config.ts
src-tauri-frontend/src/: main.tsx  sidecar-context.tsx
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/client/: app.tsx  index.html  styles.css
src/db/: index.ts  schema.ts
src/routes/: openapi.ts
src/server/: embedded-assets.ts  index.ts  init.ts  logger.ts  utils.ts
tests/: atif.test.ts  unit-preload.ts
(+241 files in other folders)
