[package]
name = "pipali"
version = "0.1.0"
description = "Pipali - Personal AI"
authors = ["Pipali Team"]
edition = "2021"

# Note: crate-type not specified - defaults to rlib, which is what we need
# for linking with main.rs binary

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2.5"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
ureq = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
